✨ feat(dropdown-modal-fix): add solution for dropdown visibility in modals by using appendTo="body" to enhance user experience

--- a/research-indicators/src/styles/custom-prime-force-styles.scss
+++ b/research-indicators/src/styles/custom-prime-force-styles.scss
@@ -27,12 +27,6 @@
   padding: 0.5rem !important;
 }
 
-// Dropdown expansion upward styles
-.dropdown-up .p-multiselect-panel {
-  transform: translateY(-100%);
-  margin-top: -10px !important;
-}
-
 @media (orientation: landscape) and (height <= 768px) {
   body {
     font-size: 13px !important;
